--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,10 @@
   <%= javascript_include_tag 'jquery.min' %>
   <%= javascript_include_tag 'jquery.poptrox.min' %>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <script src="//maps.google.com/maps/api/js?v=3.18&sensor=false&client=&key=&libraries=geometry&language=&hl=&region="></script> 
+  <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
+  <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/infobox/1.1.9/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
+
   <%= csrf_meta_tags %>
 
   <!-- shiv here -->
@@ -24,8 +28,8 @@
 </head>
 
 <% if not user_signed_in? and current_page?(root_url)%>
-  <%= stylesheet_link_tag "landing_page" %>
-  <%= javascript_include_tag 'landing_page' %>
+<%= stylesheet_link_tag "landing_page" %>
+<%= javascript_include_tag 'landing_page' %>
 
 <body class="landing_page is-loading">
 
@@ -35,66 +39,66 @@
     <!-- Main -->
     <section id="main">
       <header>
-            <h2>One App.<h2>
-            <h2>A Thousand Connections. </h2><br>
-        <span class="avatar"><%= image_tag("joel.jpg") %></span>
-        <h1 class="name">Jane Doe</h1>
-        <p class="program">Senior Psychonautics Engineer</p>
-      </header>
-            <hr />
-              <ul class="actions">
-                <li><a href="/users/sign_in" class="button">Already A User</a></li>
-              </ul>
-              <ul class="actions">
-                <li><a href="/users/sign_up" class="button">Sign Me Up!</a></li>
-              </ul>
+        <h2>One App.<h2>
+          <h2>A Thousand Connections. </h2><br>
+          <span class="avatar"><%= image_tag("joel.jpg") %></span>
+          <h1 class="name">Jane Doe</h1>
+          <p class="program">Senior Psychonautics Engineer</p>
+        </header>
+        <hr />
+        <ul class="actions">
+          <li><a href="/users/sign_in" class="button">Already A User</a></li>
+        </ul>
+        <ul class="actions">
+          <li><a href="/users/sign_up" class="button">Sign Me Up!</a></li>
+        </ul>
 
-    </section>
+      </section>
 
-    <!-- Footer -->
-    <footer id="footer">
-      <ul class="copyright">
-        <li>&copy; Apostell</li>
-        <!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
-      </ul>
-    </footer>
+      <!-- Footer -->
+      <footer id="footer">
+        <ul class="copyright">
+          <li>&copy; Apostell</li>
+          <!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+        </ul>
+      </footer>
 
-  </div>
+    </div>
 
-  <!-- Scripts -->
-  <!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
-  <script>
-  if ('addEventListener' in window) {
-    window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
-    document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-  }
-  </script>
+    <!-- Scripts -->
+    <!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
+    <script>
+    if ('addEventListener' in window) {
+      window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
+      document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+    }
+    </script>
 
-</body>
-<% elsif not user_signed_in? %>
+  </body>
+  <% elsif not user_signed_in? %>
   <%= stylesheet_link_tag "landing_page" %>
   <%= javascript_include_tag 'landing_page' %>
-<%= yield %>
+  <%= yield %>
 
-<% else %>
+  <% else %>
 
-      <!-- NAVBAR -->
+  <!-- NAVBAR -->
 
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="<%= root_path %>">Apostell</a>
-          </div>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="<%= root_path %>">Apostell</a>
+      </div>
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 <!-- 
             <form class="navbar-form navbar-left navbar_search_form " role="search">
               <div class="form-group">
@@ -102,24 +106,24 @@
               </div>
               <button type="submit" class="btn btn-default">Submit</button>
             </form>
- -->
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Messages</a></li>
-              <li><a href="<%= root_path %>">Events</a></li>
-              <li><a href="#">Flights</a></li>
-              <li><a href="#">Connections</a></li>
-              <li><a href="<%= root_path %>">Profile</a></li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-      </nav>
+          -->
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Messages</a></li>
+            <li><a href="<%= root_path %>">Events</a></li>
+            <li><a href="<%= flights_path %>">Flights</a></li>
+            <li><a href="#">Connections</a></li>
+            <li><a href="<%= root_path %>">Profile</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
-    
-    <!-- END NAVBAR -->
-<%= yield %>
-<% end %>
-<div class="container">
-  <!-- flash messages here -->
-</div>
+  </nav>
 
-</html>
+  <!-- END NAVBAR -->
+  <%= yield %>
+  <% end %>
+  <div class="container">
+    <!-- flash messages here -->
+  </div>
+
+  </html>
