--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,7 +26,7 @@
             <li><a href="<%= root_path %>">Events</a></li>
             <li><a href="<%= flights_path %>">Flights</a></li>
             <li><a href="<%= users_path %>">Connections</a></li>
-            <li><a href="<%= root_path %>">Profile</a></li>
+            <li><a href="<%= "#" %>">Profile</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
