fix login and signup

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<% if current_user %>
+
 <!-- THIS IS THE PAGE "CONNECTIONS" THAT SHOW ALL THE USERS -->
 <head>
   <%= stylesheet_link_tag "user_show" %>
@@ -87,3 +89,5 @@
       <script src="assets/js/main.js"></script>
 
     </body>
+
+<% end %>
