--- a/app/views/events/not_attending_index.html.erb
+++ b/app/views/events/not_attending_index.html.erb
@@ -4,6 +4,7 @@
   <%= stylesheet_link_tag "options_navbar" %>
   <%= javascript_include_tag 'user_show' %>
   <%= javascript_include_tag "feed" %>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 
 <body id="top">
