--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,7 +22,7 @@
             </form>
           -->
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Messages</a></li>
+            <li><a href="<%= conversations_path %>">Messages</a></li>
             <li><a href="<%= root_path %>">Events</a></li>
             <li><a href="<%= flights_path %>">Flights</a></li>
             <li><a href="<%= users_path %>">Connections</a></li>
