--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -10,30 +10,7 @@
 
   <!-- Header -->
   <header id="header">
-    <a href="#" class="image avatar">
-      <%= image_tag(current_user.avatar) %>
-    </a>
-    <h1>
-      <strong>
-        <%= current_user.full_name %>
-      </strong>
-        </h1><!-- 
-      <p>
-        Masters In Management & Systems
-      </p> -->
-      <p>
-        <%= current_user.school.name %>
-      </p>
-
-      <ul class="icons">
-        <li><a href="#" class="icon fa-group"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon fa-paper-plane-o"><span class="label">Github</span></a></li>
-        <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-        <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-      </ul>
-      <ul class="copyright">
-        <p>&copy; Apostell</p><p>Sign <%= link_to "Out",destroy_user_session_path, :method => :delete %> </a></p>
-      </ul>
+      <%= render 'users/user_sidebar' %>
     </header>
 
     <div id="main">
@@ -42,36 +19,6 @@
         <label for="show_filters" class="show_filters">Show Filters</label>
         <input type="checkbox" id="show_filters" role="button">
       </div>
-     <!--  <div class="filters">
-
-        <% if current_user.id == current_user.id %>
-        <a href="/invited_events/<%= current_user.id %>" >
-          <label class="filter filter_all_events" >
-            All Invites
-          </label>
-        </a>
-
-        <a href="/attending_events/<%= current_user.id %>" >
-          <label class="filter filter_attending_events" >
-            Attending
-          </label>
-        </a>
-
-        <a href="/not_attending_events/<%= current_user.id %>">
-          <label class="filter filter_not_attending" >
-            Not Attending
-          </label>
-        </a>
-
-        <% end %>
-
-        <a href="/created_events/<%= current_user.id %>">
-          <label class="filter filter_created" >
-            Personal Events
-          </label>
-        </a>
-      </div>
- -->
           <!-- Three -->
           <section id="" class="flight_details">
             <% @flights.each do |flight| %>
