--- a/app/views/users/_user_sidebar.html.erb
+++ b/app/views/users/_user_sidebar.html.erb
@@ -1,4 +1,4 @@
-
+<% @user ?  @user : @user = current_user %>
     <a href="#" class="image avatar">
       <%= image_tag(@user.avatar) %>
     </a>
@@ -18,7 +18,7 @@
         <li><a href="<%= users_path %>" class="icon fa-group"><span class="label">Twitter</span></a></li>
         <li><a href="<%= flights_path %>" class="icon fa-plane"><span class="label">Github</span></a></li>
         <li><a href="<%= root_path %>" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-        <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+        <li><a href="<%= conversations_path %>" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
       </ul>
       <ul class="copyright">
         <p>&copy; Apostell</p><p>Sign <%= link_to "Out",destroy_user_session_path, :method => :delete %> </a></p>
