--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,33 +1,76 @@
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="<%= root_path %>">Apostell</a>
-      </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-<!-- 
-            <form class="navbar-form navbar-left navbar_search_form " role="search">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-          -->
-          <ul class="nav navbar-nav navbar-right">
+  <%= stylesheet_link_tag 'main' %>
+        <!-- Header -->
+          <header id="header">
+            <h1><a href="<%= root_path %>">Future Imperfect</a></h1>
+            <nav class="links">
+              <ul>
             <li><a href="<%= flights_path %>">Flights</a></li>
             <li><a href="<%= conversations_path %>">Messages</a></li>
             <li><a href="<%= users_path %>">Connections</a></li>
             <li><a href="<%= "#" %>">Profile</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-  </nav>
+              </ul>
+            </nav>
+            <nav class="main">
+              <ul>
+                <li class="search">
+                  <a class="fa-search" href="#search">Search</a>
+                  <form id="search" method="get" action="#">
+                    <input type="text" name="query" placeholder="Search" />
+                  </form>
+                </li>
+                <li class="menu">
+                  <a class="fa-bars" href="#menu">Menu</a>
+                </li>
+              </ul>
+            </nav>
+          </header>
+
+        <!-- Menu -->
+          <section id="menu">
+
+            <!-- Search -->
+              <section>
+                <form class="search" method="get" action="#">
+                  <input type="text" name="query" placeholder="Search" />
+                </form>
+              </section>
+
+            <!-- Links -->
+              <section>
+                <ul class="links">
+                  <li>
+                    <a href="#">
+                      <h3>Lorem ipsum</h3>
+                      <p>Feugiat tempus veroeros dolor</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <h3>Dolor sit amet</h3>
+                      <p>Sed vitae justo condimentum</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <h3>Feugiat veroeros</h3>
+                      <p>Phasellus sed ultricies mi congue</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <h3>Etiam sed consequat</h3>
+                      <p>Porta lectus amet ultricies</p>
+                    </a>
+                  </li>
+                </ul>
+              </section>
+
+            <!-- Actions -->
+              <section>
+                <ul class="actions vertical">
+                  <li><a href="<%= destroy_user_session_path %>" class="button big fit", method="delete">Log Out</a></li>
+                </ul>
+              </section>
+
+          </section>
