--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
 
   <title>Im' In</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <%= stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' %>
-  <%= stylesheet_link_tag 'main' %>
-
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
- </script>
+  <%= stylesheet_link_tag 'font-awesome' %>
+      <%= javascript_include_tag 'jquery'%>
+      <%= javascript_include_tag 'skel'%>
+      <%= javascript_include_tag 'util'%>
+      <%= javascript_include_tag 'main'%>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous">
 </script><!-- only if you need custom infoboxes -->
@@ -79,13 +79,19 @@
   <%= yield %>
 
   <% else %>
-
+<body>
+  <%= stylesheet_link_tag 'main' %>
   <!-- NAVBAR -->
 
+      <div id="wrapper">
+        <div id="main">
 <%= render "layouts/navbar" %>
 
   <!-- END NAVBAR -->
   <%= yield %>
+        </div>
+      </div>
+</body>
   <% end %>
   <div class="container">
     <!-- flash messages here -->
