--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1708,10 +1708,10 @@
 		-webkit-transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
 		-ms-transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
 		transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
-		background-color: #2EBAAE;
-		border: 0;
+		border: solid 1px #2EBAAE !important;
+		background-color: transparent !important;
+		color: #2EBAAE !important;
 		box-shadow: inset 0 0 0 1px rgba(160, 160, 160, 0.3);
-		color: white !important;
 		cursor: pointer;
 		display: inline-block;
 		font-family: "Raleway", Helvetica, sans-serif;
@@ -1726,6 +1726,7 @@
 		text-transform: uppercase;
 		white-space: nowrap;
 	}
+
 
 		input[type="submit"]:hover,
 		input[type="reset"]:hover,
@@ -2379,6 +2380,7 @@
 		ul.posts {
 			list-style: none;
 			padding: 0;
+			margin-left: 5em
 		}
 
 			ul.posts li {
@@ -2445,6 +2447,13 @@
 					ul.posts article header > :last-child {
 						margin-bottom: 0;
 					}
+
+
+@media screen and (max-width: 736px) {
+	ul.posts {
+			margin-left: 0em;
+		}
+	}
 
 	dl {
 		margin: 0 0 2em 0;
@@ -2575,7 +2584,7 @@
 		padding: 3em 3em 1em 3em ;
 		background: #ffffff;
 		border: solid 1px rgba(160, 160, 160, 0.3);
-		margin: 0 0 3em 0;
+		margin: 0 12em 3em 12em;
 		position: relative;
 	}
 
@@ -3339,15 +3348,6 @@
 /* Menu */
 
 	#menu {
-		-moz-transform: translateX(25em);
-		-webkit-transform: translateX(25em);
-		-ms-transform: translateX(25em);
-		transform: translateX(25em);
-		-moz-transition: -moz-transform 0.5s ease, visibility 0.5s;
-		-webkit-transition: -webkit-transform 0.5s ease, visibility 0.5s;
-		-ms-transition: -ms-transform 0.5s ease, visibility 0.5s;
-		transition: transform 0.5s ease, visibility 0.5s;
-		-webkit-overflow-scrolling: touch;
 		background: #ffffff;
 		border-left: solid 1px rgba(160, 160, 160, 0.3);
 		box-shadow: none;
@@ -3357,7 +3357,6 @@
 		position: fixed;
 		right: 0;
 		top: 0;
-		visibility: hidden;
 		width: 25em;
 		z-index: 10002;
 	}
