--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -1,33 +1,28 @@
-<%= form_for(@flight) do |f| %>
-  <% if @flight.errors.any? %>
+<%= form_for(@request) do |f| %>
+  <% if @request.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@flight.errors.count, "error") %> prohibited this flight from being saved:</h2>
+      <h2><%= pluralize(@request.errors.count, "error") %> prohibited this request from being saved:</h2>
 
       <ul>
-      <% @flight.errors.full_messages.each do |msg| %>
+      <% @request.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
-<!--   <div class="field">
+  <div class="field">
     <%= f.label :content %><br />
     <%= f.text_area :content %>
-  </div> -->
-<!--   <div class="field">
-    <%= f.label :user %><br />
-    <%= f.text_field :user %>
-  </div> -->
-<!--   <div class="field">
+  </div>
+  <div class="field">
     <%= f.label :picture %><br />
     <%= f.text_field :picture %>
-  </div> -->
-<!--   <div class="field">
+  </div>
+  <div class="field">
     <%= f.label :public %><br />
     <%= f.check_box :public %>
-  </div> -->
-  
+  </div>
   <div class="field">
     <%= f.label :departure %><br />
     <%= f.text_field :departure %>
@@ -39,6 +34,18 @@
   <div class="field">
     <%= f.label :date %><br />
     <%= f.datetime_select :date %>
+  </div>
+  <div class="field">
+    <%= f.label :latitude %><br />
+    <%= f.text_field :latitude %>
+  </div>
+  <div class="field">
+    <%= f.label :longitude %><br />
+    <%= f.text_field :longitude %>
+  </div>
+  <div class="field">
+    <%= f.label :references %><br />
+    <%= f.text_field :references %>
   </div>
   <div class="actions">
     <%= f.submit %>
