--- a/app/views/requests/_requests_feed.html.erb
+++ b/app/views/requests/_requests_feed.html.erb
@@ -4,51 +4,48 @@
       </div> -->
           <!-- Three -->
 
-
   <section id="intro">
     <!-- <a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a> -->
     <header>
       <center>
-      <h2>Trips</h2>
-      <p>Need Help With Sending A Package?! Here's Who's Traveling</p>
+      <h2>Requests</h2>
+      <p>Traveling?! Find Out Who Needs Help With A Package</p>
     </center>
     </header>
   </section>
-
         
-        <% if @flights.present? %>
-          <%= will_paginate @flights %>
+        <% if @requests.present? %>
+          <%= will_paginate @requests %>
         <% end %>
 
-          <section id="" class="flight_details">
-            <% @flights.each do |flight| %>
+          <section id="" class="request_details">
+            <% @requests.each do |request| %>
 
               <article class="post">
                 <header>
                   <div class="title">
-                    <h3 class="icon fa-plane"> <%= flight.departure %></h3>
-                    <p class="icon fa-home"> <%= flight.destination %> </p>
+                    <h3 class="icon fa-plane"> <%= request.departure %></h3>
+                    <p class="icon fa-home"> <%= request.destination %> </p>
              <div class="4u$ 12u$(small)">
-                    <%= image_tag "http://maps.google.com/maps/api/staticmap?size=500x250&sensor=false&zoom=4&markers=#{flight.latitude}%2C#{flight.longitude}" %>
+                    <%= image_tag "http://maps.google.com/maps/api/staticmap?size=500x250&sensor=false&zoom=4&markers=#{request.latitude}%2C#{request.longitude}" %>
               </div> 
                   </div>
                   <div class="meta">
-                    <p class="published icon fa-calendar"> <%= Flight.day(flight.date) %></p>
-                    <p class=" icon fa-clock-o"> <%= Flight.time(flight.date) %></p>
+                    <p class="published icon fa-calendar"> Send By - <%= Request.day(request.date) %></p>
                     <a href="#" class="author">
                       <span class="name">
-                        <%= flight.user.first_name %>
+                        <%= request.user.first_name %>
                       </span>
                    </a> 
                     <p class="author">
                       <span class="">
-                    <%= image_tag(flight.user.avatar) %>
+                    <%= image_tag(request.user.avatar) %>
                    </p> 
                   </div>
                 </header>
                 <footer>
                   <ul class="actions">
-              <li><%= button_to "Contact #{flight.user.first_name}", { action: "create",method: :post, controller: 'conversations', class: 'icon fa-envelope',sender_id: current_user.id, recipient_id: flight.user.id} %></li>
+              <li><%= button_to "Contact #{request.user.first_name}", { action: "create",method: :post, controller: 'conversations', class: 'icon fa-envelope',sender_id: current_user.id, recipient_id: request.user.id} %></li>
                   </ul>
                   <ul class="stats">
                     <!-- <li><a href="#">General</a></li> -->
@@ -61,9 +58,8 @@
           </section>
 <% end %>
 
-        
-        <% if @flights.present? %>
-          <%= will_paginate @flights %>
+        <% if @requests.present? %>
+          <%= will_paginate @requests %>
         <% end %>
 
       <!-- Scripts -->
