--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -81,6 +81,7 @@
 
 	.row.uniform > * > :first-child {
 		margin-top: 0;
+		margin-bottom: 0em;
 	}
 
 	.row.uniform > * > :last-child {
@@ -3434,3 +3435,41 @@
 			}
 
 		}
+
+		.form{
+			background-color: #ffffff;
+			padding: 2em;
+		}
+
+
+.flickr_pagination {
+  text-align: center;
+  padding: 0.3em;
+  cursor: default; }
+  .flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
+    padding: 0.2em 0.5em; }
+  .flickr_pagination .disabled {
+    color: #aaaaaa; }
+  .flickr_pagination .current {
+    font-style: normal;
+    font-weight: bold;
+    color: #2ebaae; 
+  	background-color: #ffffff;
+  	border: solid 2px #2ebaae}
+  .flickr_pagination a {
+    border: 1px solid #dddddd;
+    color: #2ebaae;
+    text-decoration: none; }
+    .flickr_pagination a:hover, .flickr_pagination a:focus {
+      border-color: #2ebaae;
+      background: #ffffff;
+      color: white; }
+  .flickr_pagination .page_info {
+    color: #aaaaaa;
+    padding-top: 0.8em; }
+  .flickr_pagination .previous_page, .flickr_pagination .next_page {
+    border-width: 2px; }
+  .flickr_pagination .previous_page {
+    margin-right: 1em; }
+  .flickr_pagination .next_page {
+    margin-left: 1em; }
