--- a/app/views/flights/_flights_feed.html.erb
+++ b/app/views/flights/_flights_feed.html.erb
@@ -2,72 +2,84 @@
         <label for="show_filters" class="show_filters">Show Filters</label>
         <input type="checkbox" id="show_filters" role="button">
       </div> -->
-          <!-- Three -->
+      <!-- Three -->
 
 
-  <section id="intro">
-    <!-- <a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a> -->
-    <header>
-      <center>
-      <h2>Trips</h2>
-      <p>Need Help With Sending A Package?! Here's Who's Traveling</p>
-    </center>
-    </header>
-  </section>
+      <section id="intro">
+        <!-- <a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a> -->
+        <header>
+          <center>
+            <h2>Trips</h2>
+            <p>Need Help With Sending A Package?! Here's Who's Traveling</p>
+          </center>
+        </header>
+      </section>
 
-        
-        <% if @flights.present? %>
-          <%= will_paginate @flights %>
-        <% end %>
 
-          <section id="" class="flight_details">
-            <% @flights.each do |flight| %>
+      <% if @flights.present? %>
+      <div class="flickr_pagination">
+        <div class="page_info">
+          <%= page_entries_info @flights %>
+        </div>
+        <%= will_paginate @flights, :container => false %>
+      </div>
+      <% end %>
 
-              <article class="post">
-                <header>
-                  <div class="title mapContainer">
-                    <h3 class="icon fa-plane"> <%= flight.departure %></h3>
-                    <p class="icon fa-home"> <%= flight.destination %> </p>
-             <div class="4u$ 12u$(small)">
-                    <%= image_tag "http://maps.google.com/maps/api/staticmap?size=500x250&sensor=false&zoom=4&markers=#{flight.latitude}%2C#{flight.longitude}", class:"map" %>
+      <section id="" class="flight_details">
+        <% @flights.each do |flight| %>
+
+        <article class="post">
+          <header>
+            <div class="title mapContainer">
+              <h3 class="icon fa-plane"> <%= flight.departure %></h3>
+              <p class="icon fa-home"> <%= flight.destination %> </p>
+              <div class="4u$ 12u$(small)">
+                <%= image_tag "http://maps.google.com/maps/api/staticmap?size=500x250&sensor=false&zoom=4&markers=#{flight.latitude}%2C#{flight.longitude}", class:"map" %>
               </div> 
-                  </div>
-                  <div class="meta">
-                    <p class="published icon fa-calendar"> <%= Flight.day(flight.date) %></p>
-                    <p class=" icon fa-clock-o"> <%= Flight.time(flight.date) %></p>
-                    <a href="#" class="author">
-                      <span class="name">
-                        <%= flight.user.first_name %>
-                      </span>
-                   </a> 
-                    <p class="author">
-                      <span class="">
-                    <%= image_tag(flight.user.avatar) %>
-                   </p> 
-                  </div>
-                </header>
-                <footer>
-                  <ul class="actions">
-              <li><%= button_to "Contact #{flight.user.first_name}", { action: "create",method: :post, controller: 'conversations', class: 'icon fa-envelope',sender_id: current_user.id, recipient_id: flight.user.id} %></li>
-                  </ul>
-                  <ul class="stats">
-                    <!-- <li><a href="#">General</a></li> -->
-                    <li><a href="#" class="icon fa-star fa-2x">28</a></li>
-                    <!-- <li><a href="#" class="icon fa-comment">128</a></li> -->
-                  </ul>
-                </footer>
-              </article>
+            </div>
+            <div class="meta">
+              <p class="published icon fa-calendar"> <%= Flight.day(flight.date) %></p>
+              <p class=" icon fa-clock-o"> <%= Flight.time(flight.date) %></p>
+              <a href="#" class="author">
+                <span class="name">
+                  <%= flight.user.first_name %>
+                </span>
+              </a> 
+              <p class="author">
+                <span class="">
+                  <%= image_tag(flight.user.avatar) %>
+                </p> 
+              </div>
+            </header>
+            <footer>
+              <ul class="actions">
+                <p><%= flight.content %></p> 
+                <li><%= button_to "Contact #{flight.user.first_name}", { action: "create",method: :post, controller: 'conversations', class: 'icon fa-envelope',sender_id: current_user.id, recipient_id: flight.user.id} %></li>
+              </ul>
+              <ul class="stats">
+                <!-- <li><a href="#">General</a></li> -->
+                <li><a href="#" class="icon fa-star fa-2x">28</a></li>
+                <!-- <li><a href="#" class="icon fa-comment">128</a></li> -->
+              </ul>
+            </footer>
+          </article>
 
-          </section>
-<% end %>
+        </section>
+        <% end %>
 
         
         <% if @flights.present? %>
-          <%= will_paginate @flights %>
+        
+      <div class="flickr_pagination">
+        <div class="page_info">
+          <%= page_entries_info @flights %>
+        </div>
+        <%= will_paginate @flights, :container => false %>
+      </div>
         <% end %>
 
-      <!-- Scripts -->
-      <script src="assets/js/skel.min.js"></script>
-      <script src="assets/js/util.js"></script>
-      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-      <script src="assets/js/main.js"></script>
+        <!-- Scripts -->
+        <script src="assets/js/skel.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+        <script src="assets/js/main.js"></script>
