--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -1,40 +1,51 @@
+<div class="form">
+
+
+<!-- <%= link_to 'Edit', edit_flight_path(@flight) %> | -->
+<%= link_to "I'm Done!", flights_path %>
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Content:</b>
-  <%= @flight.content %>
-</p>
+<center>
+<section id="sidebar">
+  <%= form_for(@flight, class:"") do |f| %>
 
-<p>
-  <b>User:</b>
-  <%= @flight.user %>
-</p>
+  <div class="row uniform">
+    <% if @flight.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@flight.errors.count, "error") %> prohibited this flight from being saved:</h2>
 
-<p>
-  <b>Picture:</b>
-  <%= @flight.picture %>
-</p>
+      <ul>
+        <% @flight.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+    <% end %>
 
-<p>
-  <b>Public:</b>
-  <%= @flight.public %>
-</p>
+    <div class="field 12u 12u$(small)">
+      <%= f.label :what_city_are_you_flying_from_? %><br />
+      <%= f.text_field :departure %>
+    </div>
+    <div class="field 12u 12u$(small)">
+      <%= f.label :what_city_are_you_flying_to_? %><br />
+      <%= f.text_field :destination %>
+    </div>
+    <div class="field 12u 12u$(small)">
+      <%= f.label :what_is_your_departure_date_? %><br />
+      <%= f.datetime_select :date %>
+    </div>
+    <div class="field 12u 12u$(small)">
+      <%= f.label :optional_comment %><br />
+      <%= f.text_area :content, rows:3 %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+  </div>
+  <% end %>
+</section>
+</center>
 
-<p>
-  <b>Departure:</b>
-  <%= @flight.departure %>
-</p>
-
-<p>
-  <b>Destination:</b>
-  <%= @flight.destination %>
-</p>
-
-<p>
-  <b>Date:</b>
-  <%= @flight.date %>
-</p>
-
-
-<%= link_to 'Edit', edit_flight_path(@flight) %> |
-<%= link_to 'Back', flights_path %>
+<!-- <%= link_to 'Edit', edit_flight_path(@flight) %> | -->
+<%= link_to "I'm Done!", flights_path %>
+</div>
