--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2381,13 +2381,14 @@
 		ul.posts {
 			list-style: none;
 			padding: 0;
-			margin-left: 5em
+			margin-left: 0em
 		}
 
 			ul.posts li {
 				border-top: dotted 1px rgba(160, 160, 160, 0.3);
 				margin: 1.5em 0 0 0;
 				padding: 1.5em 0 0 0;
+				margin-left: 40%; 
 			}
 
 				ul.posts li:first-child {
@@ -3473,3 +3474,8 @@
     margin-right: 1em; }
   .flickr_pagination .next_page {
     margin-left: 1em; }
+
+
+   .request_details {
+   	
+   }
