shift pagination down

--- a/app/views/flights/created_index.html.erb
+++ b/app/views/flights/created_index.html.erb
@@ -2,9 +2,9 @@
 
 
     <div id="main">
+<%= link_to 'Add A New Trip', new_flight_path %>
       <%= render 'flights/flights_feed' %>
     </div>
 
 <br />
 
-<%= link_to 'New Flight', new_flight_path %>
