--- a/app/views/requests/created_index.html.erb
+++ b/app/views/requests/created_index.html.erb
@@ -1,8 +1,9 @@
 
     <div id="main">
+<%= link_to 'Post A New Request', new_request_path %>
+
       <%= render 'requests/requests_feed' %>
     </div>
 
 <br />
 
-<%= link_to 'New Request', new_request_path %>
